// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating rollup stats version 3 matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "main-cc182ba1.js",
      "normalized": "main-*.js",
      "size": 577066,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-rollup-app-v3-iife",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "main-cc182ba1.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": "codecov-rollup-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;

exports[`Generating rollup stats version 4 matches the snapshot 1`] = `
{
  "assets": [
    {
      "name": "main-ChwnvxRF.js",
      "normalized": "main-ChwnvxRF.js",
      "size": 577066,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": "test-rollup-app-v4-iife",
  "bundler": {
    "name": "rollup",
    "version": "4.9.6",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "main-ChwnvxRF.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560240,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": "codecov-rollup-bundle-analysis-plugin",
    "version": "1.0.0",
  },
  "version": "1",
}
`;
